tests/snapshots/ui__ui_test_err_format_flag-2.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress input output --format targz\", dir)"
---
[ERROR] Failed to parse `--format targz`
 - Unsupported extension 'targz'

hint: Supported extensions are: tar, zip, bz, bz2, gz, lz4, xz, lzma, sz, zst
hint: Supported aliases are: tgz, tbz, tlz4, txz, tzlma, tsz, tzst
hint: 
hint: Examples:
hint:   --format tar
hint:   --format gz
hint:   --format tar.gz

